<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#55E8FF">

    <TextView
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="48dp"
        android:background="#0258D3"
        android:gravity="center_vertical"
        android:text="@string/AppName"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="231dp"
        android:layout_height="94dp"
        app:srcCompat="@drawable/car"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="114dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/cdAddCarBrand"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="276dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/cdAddCarModel"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="338dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="521dp"
        tools:ignore="MissingConstraints"
        android:hint="@string/txtCarPriceDisplay"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPrice"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="538dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="78dp"
        android:layout_height="25dp"
        android:text="@string/txtBrand"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="287dp"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtModel"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="357dp"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2369ED"
        android:text="@string/btnCheckPrice"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="440dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCheckCarTopic"
        android:textAppearance="bold"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="65dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2369ED"
        android:text="@string/btntxtBack"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="624dp" />

</androidx.constraintlayout.widget.ConstraintLayout>