<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3EFFFF">


    <TextView
        android:id="@+id/textView"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:background="#0258D3"
        android:gravity="center_vertical"
        android:text="@string/AppName"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="92dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="34dp"
        app:srcCompat="@drawable/car"
        android:contentDescription="@string/imgCarApp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="61dp"
        android:layout_centerHorizontal="true"
        android:background="#2369ED"
        android:text="@string/btnHomeAddCar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginTop="19dp"
        android:background="#2369ED"
        android:text="@string/btnHomeCheckCar"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>